--- a/hola.html
+++ b/hola.html
@@ -10,10 +10,13 @@
 
 <body>
     <header>
-        <main>
             Este es mi encabezado
-        </main>
     </header>
+        <main>
+        </main>
+        <footer>
+            este es mi primer footer
+        </footer>
 </body>
 
 </html>
