--- a/hola.html
+++ b/hola.html
@@ -13,6 +13,7 @@
             Este es mi encabezado
     </header>
         <main>
+            hola de nuevo
         </main>
         <footer>
             este es mi primer footer
