--- a/hola.html
+++ b/hola.html
@@ -13,6 +13,7 @@
             Este es mi encabezado
     </header>
         <main>
+            <h1>^^ hola como estas yo bien y tu</h1>
         </main>
         <footer>
             este es mi primer footer
